Mid-Term Report

--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,12 @@
 \input{preamble}
 \begin{document}
 \maketitle
+
+\subfile{overview}
+\subfile{tor}
+\subfile{i2p}
+\subfile{vpn}
+\newpage
+\subfile{resources}
+
 \end{document}
