--- a/preamble.tex
+++ b/preamble.tex
@@ -1,9 +1,20 @@
 \documentclass[11pt,a4paper]{article}
+\usepackage{hyperref}
 \usepackage{fullpage}
 \usepackage{subfiles}
+\usepackage{graphicx}
+\usepackage{wrapfig}
 \author{
 Govind Kumar \\ 210050058 \and
 Khushang Singla \\ 210050085
 }
 \title{Anonymous Communication Tools}
 \date{March - April 2023}
+
+
+\hypersetup{
+    colorlinks=true,
+    linkcolor=black,
+    filecolor=magenta,      
+    urlcolor=black,
+}
